<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/txt_github_repo"
        app:titleTextColor="@color/white"
        />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/hint_user_name"
        android:paddingStart="10dp"
        android:background="@drawable/border_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibSearch"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_margin="10dp"
        app:layout_constraintHorizontal_weight="9"
        />

    <ImageView
        android:id="@+id/ibSearch"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toEndOf="@+id/etUserName"
        app:layout_constraintTop_toTopOf="@+id/etUserName"
        app:layout_constraintBottom_toBottomOf="@+id/etUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:src="@drawable/ic_go"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recRepoList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/etUserName"
        app:layout_constraintTop_toBottomOf="@+id/etUserName"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvNoErrorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/msg_no_repo_found"/>

    <ProgressBar
        android:id="@+id/pbRepoLoader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
    

</androidx.constraintlayout.widget.ConstraintLayout>